--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -17,7 +17,7 @@
 </div>
 
 <div>
-    <h2>Here are some links to help you start: </h2>
+    <h2>Here are some links to help you start: HOLA</h2>
     <ul>
         <li>
             <h2><a target="_blank" rel="noopener" href="https://medium.com/@cardoso.nilo/easily-deploy-angular-7-app-to-salesforce-as-visualforce-page-with-routing-b03be8afc298">Easily deploy Angular 7 App to Salesforce as visualforce page with Routing</a></h2>
