--- a/package/pages/salesforcegular.page
+++ b/package/pages/salesforcegular.page
@@ -1,38 +1,38 @@
 
 <apex:page sidebar="false" id="salesforcegular" lightningStylesheets="true" showHeader="true" sideBar="false" docType="html-5.0" controller="salesforcegularController" >
-	<head>
-		<meta charset="utf-8"/>
-		<title>Salesforcegular</title>
-		<base href="/"/>
-		
-		<meta name="viewport" content="width=device-width, initial-scale=1"/>
-		<link rel="icon" type="image/x-icon" href="http://localhost:4200/favicon.ico"/>
+<head>
+  <meta charset="utf-8"/>
+  <title>Testangular7</title>
+  <base href="/"/>
 
-	    <script>
-			// For the images in the resources:
-			gSfStaticRoot = "{!URLFOR($Resource.salesforcegularStaticResources, 'favicon.ico')}";
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <link rel="icon" type="image/x-icon" href="{!URLFOR($Resource.salesforcegularStaticResources, 'favicon.ico')}"/>
+</head>
 
-			if (!(gSfStaticRoot[0] === '{')) { //in local mode this will not have been replaced
-				gSfStaticRoot = gSfStaticRoot.substr(0, gSfStaticRoot.lastIndexOf('/')) + '/';
-			} else {
-				gSfStaticRoot = '';
-			}
-			function getSfStaticResourceRoot() {
-				return gSfStaticRoot;
-			}
-			// For Routing:
-			gSfPageRoot = 'apex/salesforcegular';
+<script>
+	// For the images in the resources:
+	gSfStaticRoot = "{!URLFOR($Resource.salesforcegularStaticResources, 'favicon.ico')}";
 
-			function getSfPageRoot() {
-				return gSfPageRoot;
-			}
+	if (!(gSfStaticRoot[0] === '{')) { //in local mode this will not have been replaced
+		gSfStaticRoot = gSfStaticRoot.substr(0, gSfStaticRoot.lastIndexOf('/')) + '/';
+	} else {
+		gSfStaticRoot = '';
+	}
+	function getSfStaticResourceRoot() {
+		return gSfStaticRoot;
+	}
+	// For Routing:
+	gSfPageRoot = 'apex/salesforcegular';
 
-		</script>
-	</head>
-	<body>
-		<app-root></app-root>
-	<script src="runtime-es2015.js" type="module"></script><script src="polyfills-es2015.js" type="module"></script><script src="runtime-es5.js" nomodule defer></script><script src="polyfills-es5.js" nomodule defer></script><script src="styles-es2015.js" type="module"></script><script src="styles-es5.js" nomodule defer></script><script src="vendor-es2015.js" type="module"></script><script src="main-es2015.js" type="module"></script><script src="vendor-es5.js" nomodule defer></script><script src="main-es5.js" nomodule defer></script><script type="text/javascript">
-                                window._VfResources = 'http://localhost:4200';
-                              </script>
-                  </body>
+	function getSfPageRoot() {
+		return gSfPageRoot;
+	}
+
+</script>
+
+<body>
+  <app-root></app-root>
+<script type="text/javascript" src="{!URLFOR($Resource.salesforcegularStaticResources, 'runtime.js')}"></script><script type="text/javascript" src="{!URLFOR($Resource.salesforcegularStaticResources, 'es2015-polyfills.js')}" nomodule=""></script><script type="text/javascript" src="{!URLFOR($Resource.salesforcegularStaticResources, 'polyfills.js')}"></script><script type="text/javascript" src="{!URLFOR($Resource.salesforcegularStaticResources, 'styles.js')}"></script><script type="text/javascript" src="{!URLFOR($Resource.salesforcegularStaticResources, 'vendor.js')}"></script><script type="text/javascript" src="{!URLFOR($Resource.salesforcegularStaticResources, 'main.js')}"></script><script type="text/javascript">
+    window._VfResources = '{!URLFOR($Resource.salesforcegularStaticResources)}';
+    </script></body>
 </apex:page>
